<resources>
    <string name="app_name">CoronaStats</string>
    <string name="logoutConfirm">Are you sure you want to exit?</string>
    <string name="authenticating" translatable="false">Authenticating . . . .</string>
    <string name="translationLink" translatable="false">https://coronastats.oneskyapp.com/</string>
    <string name="noEmailClient">No email clients installed on device</string>
    <string name="sendEmailWith">Send email with..</string>
    <string name="iloveThisApp">I Love this App</string>
    <string name="thanks">Thanks for this App, it is So useful!</string>
    <string name="help_fragment">Help</string>
    <string name="about_fragment">About</string>
    <string name="first_slide">Social Distancing</string>
    <string name="second_slide">Wash Your Hands Often</string>
    <string name="third_slide">Wear a Face Mask</string>
    <string name="fourth_slide">Stay At Home</string>
    <string name="first_slide_desc">Keep your distance from others to protect them from getting sick too.</string>
    <string name="second_slide_desc">Wash your hands with soap and water, scrub your hands for at least 30 seconds.</string>
    <string name="third_slide_desc"> Consider wearing a face mask when you are sick with a cough or sneezing</string>
    <string name="forth_slide_desc">Staying at home will help control the spread of the virus to friends, the wider community.</string>
    <string name="skip">Skip</string>
    <string name="nxt_btn">Next</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="privacy_description">
        Privacy Notice Corona-Stats\nThis privacy notice is to make it easier
        for members of the public to understand how Corona Stats may process your personal information
        during the unprecedented challenges we are all facing during the Coronavirus pandemic (COVID-19).
        \n\n
        A.   Privacy policy\n
        corona Stats is operated by a millennial. He is committed
        to protecting the privacy and security of your personal information (‘personal data’). This
        policy (together with our terms of use) describes how we collect and use your personal data
        during your use of this App, in accordance with the General Data Protection Regulation (GDPR)
        and Associated Data Protection Legislation.
        \n\n
        B.  Processing activity
        \n
        In order for us to assist the community during this time, it is
        necessary for us to collect, hold and process personal information about you. The information
        collected and held will vary and will depend on the reason for processing. We will process
        personal information to:\n
    \n\u25CF Monitoring Covid-19 based on user usage and social care bodies and the Government
        including providing information to the public about Covid-19 and its effectiveness and
        information about capacity, medicines, equipment, supplies, services and the workforce
        within the health services and adult social care services.\n
    \n\u25CF Delivering services to patients, clinicians, the health services and adult social care
        services workforce and the public about and in connection with Covid-19, including the
        provision of information, fit notes and the provision of health care and adult social care
        services.\n
    \n\u25CF Research and planning in relation to Covid-19.\n

     Information requirements
     In regard to our processing activity, the below personal data may be processed:\n\u25CF Name \n\u25CF Email Address
        \n\n
        C.   Types of data we collect about you
        \n
        The data collected by CoronaStats App, is store, and use the following
        categories of data when you make use of this App: Device information such as android version and OS build. The app does not keep
        track of geographical location or any sort of GPS settings. Data you input into the app solely depends
        on you. sharing you data with the developer solely depends on you. The App will not restrict you from using
        it\'s services and resources.
        \n\n
        D.   Glossary
        \n
        Where we refer in this policy to your ‘personal data’, we mean any
        recorded information that is about you and from which you can be identified. It does not
        include data where your identity has been removed (anonymous data).

    Where we refer to the ‘processing’ of your personal data, we mean anything that we do with that
        information, including collection, use, storage, disclosure or retention.
        \n\n
        E.   When we Collect your data
        \n
        We will collect the vast majority of data about you when
        you give feedback about our App, e-mail or other social media functions on our App, when you
        contact the team for a problem or suggestion with our App, take careful consideration when
        sending this email and keep it formal.
        \n\n
        F.	Sharing your data with third parties
        \n
        You may share your data (Screenshots) with third parties who
        provide services sharing capabilities, the app does not keep track of this in or otherwise
        monitor this kind of actions.
        \n\n
        G.	Where we store your data
        \n
        We may store data collected within the app or electronically.
        The data is stored on our secure servers and/or in our premises within Namibia.
        \n\n
        H.	Retaining your data
        \n
        We will only retain your data for as long as we need it to
        fulfil our purposes, including any relating to legal, accounting, or reporting requirements.
        \n\n
        I.	Your rights
        \n
        Under certain circumstances, by law you have the right to:
    \n\u25CF Request access to your data (commonly known as a "subject access request"). This enables
    you to receive a copy of your data and to check that we are lawfully processing it
    \n\u25CF Request correction of your data. This enables you to ask us to correct any incomplete
    or inaccurate information we hold about you.
    \n\u25CF Request erasure of your data. This enables you to ask us to delete or remove your data
    where there is no good reason for us continuing to process it. You also have the right to ask us
        to delete or remove your data where you have exercised your right to object to processing (see below).
    \n\u25CF Object to processing of your data where we are relying on our legitimate interests
        [or those of a third party] and there is something about your particular situation which
        makes you want to object to processing on this ground.
    \n\u25CF Request the restriction of processing of your data. This enables you to ask us to suspend
        the processing of your data, for example if you want us to establish its accuracy or the reason for processing it.
    \n\u25CF Request the transfer of your data to another party.
        \n

    Depending on the circumstances and the nature of your request it may not be possible for us to
        do what you have asked, for example, where there is a statutory or contractual requirement
        for us to process your data and it would not be possible to fulfil our legal obligations if
        we were to stop.  However, where you have consented to the processing you can withdraw your
        consent at any time by emailing us at: email@address.com In this event, we will stop the
        processing as soon as we can.  However, this will not affect the lawfulness of any processing
        carried out before your withdrawal of consent and you may no longer be able to use the site
        in the same way as you did before.

    If you want to exercise any of the rights described above or are dissatisfied with the way we
        have used your information, you should contact the App developer. We will seek to deal with
        your request without undue delay, and in any event in accordance with the requirements of
        the GDPR. Please note that we may keep a record of your communications to help us resolve
        any issues which you raise.
        \n\n
        J.	Change to this policy
        \n
        Any changes we may make to our privacy policy in the future
        will be posted on this page.  Please check back frequently to see any updates or changes to
        our privacy policy.
        \n\n



    </string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="total_active">Total Active</string>
    <string name="symptoms">Symptoms</string>
    <string name="write_about_high_temperature">Write about high temperature</string>
    <string name="worldwide_cases">Coronavirus Pandemic</string>
    <string name="prevention">Prevention</string>
    <string name="treatment">Treatment</string>
    <string name="treatment_desc">There is no specific medicine to prevent or treat coronavirus disease (COVID-19). People may need supportive care to help them breathe.</string>
    <string name="self_care">Self Care</string>
    <string name="self_care_desc">If you have mild symptoms, stay at home until you have recovered. You can relieve your symptoms if you:</string>
    <string name="helpline_number">HelpLine Number</string>
    <string name="help_line">If you start showing symptoms, DO NOT go to a hospital, rather seek for help on the free hotline.</string>
    <string name="logout">Exit</string>
    <string name="app_info">App info</string>
    <string name="connect_with_me">Want to know more?</string>
    <string name="socials">Connect</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="question_need_help">Question?  Want to improve this App?</string>
    <string name="contact_owner">Feedback</string>
    <string name="_2020_2020_coronatracker">Copyright 2020 © CoronaStats</string>
    <string name="legal_info">Legal info</string>
    <string name="world_o_meters">World O meters</string>
    <string name="world_health_organisation">World Health Organisation</string>
    <string name="protect_yourself">How to Protect Yourself &amp; Others</string>
    <string name="help_translate">Help translate CoronaStats into your language!</string>
    <string name="how_does_the_virus_spreads">How does the virus spreads?</string>
    <string name="coronavirus_disease">2019 Coronavirus Disease (COVID-19)</string>
    <string name="coronaviruses_cov_are">Coronaviruses (CoV) are a large family of viruses that cause illness ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS-CoV) and Severe Acute Respiratory Syndrome (SARS-CoV). A novel coronavirus (nCoV) is a new strain that has not been previously identiﬁed in humans.</string>
    <string name="visit_http">Visit  https://coronastats.oneskyapp.com/</string>
    <string name="app_version" translatable="false">Version 1.1.0</string>
    <string name="licenses">licenses</string>
</resources>