<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About.AppInfo"
    android:background="@drawable/backgroundss"
    android:padding="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="@color/light_black"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand"
                android:textSize="28sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand"
                android:textAlignment="center"
                android:layout_marginBottom="200dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2020_2020_coronatracker"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:fontFamily="@font/quicksand"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/license_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/licenses"
                android:layout_marginTop="30dp"
                android:textColor="@color/dark_grey"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand"
                android:textSize="23sp"/>
            <include layout="@layout/device_info"/>


        </LinearLayout>

    </ScrollView>








</RelativeLayout>