<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true"
    android:background="@drawable/backgroundss"
    android:descendantFocusability="beforeDescendants">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <RelativeLayout
            android:id="@+id/blueSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/totalActive">

            <ImageView
                android:visibility="invisible"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="1dp"
                android:src="@drawable/nurse"
                android:layout_below="@+id/preventionTitle"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/preventionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textAlignment="center"
                android:layout_marginBottom="1dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/quicksand"
                android:text="@string/protect_yourself"
                android:textColor="@color/white"/>




        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="-120dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/title_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coronavirus_disease"
                    android:textSize="23sp"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/totalActive"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_black"
                    android:text="@string/coronaviruses_cov_are"
                    android:fontFamily="@font/quicksand"
                    android:textSize="18sp"
                    />
            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/symptoms_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symptoms"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/totalActive"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textSize="23sp"/>




                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/symptoms_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/symptoms_title"/>









            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/spread_title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_does_the_virus_spreads"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/totalActive"
                    android:layout_margin="10dp"
                    android:textSize="23sp"/>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/spread_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/prevention_title"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prevention"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/totalActive"
                    android:layout_margin="10dp"
                    android:textSize="23sp"/>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/prevention_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/treatment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/treatment"
                    android:textColor="@color/totalActive"
                    android:textStyle="bold"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/treatment_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treatment_desc"
                    android:textColor="@color/light_black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/quicksand" />

                <ImageView
                    android:id="@+id/vaccine_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/vaccine"/>






            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/self_care"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_care"
                    android:textStyle="bold"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/totalActive"
                    android:layout_margin="10dp"
                    android:textSize="23sp"/>

                <TextView
                    android:id="@+id/self_care_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_care_desc"
                    android:textColor="@color/light_black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/quicksand" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/self_care_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp" />




            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/helpLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpline_number"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/totalActive"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:textSize="23sp"/>

                <TextView
                    android:id="@+id/help_line_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_line"
                    android:textColor="@color/light_black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/quicksand" />

                <androidx.recyclerview.widget.RecyclerView
                    android:background="@drawable/border_grey"
                    android:padding="5dp"
                    android:id="@+id/helpNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />




                <ImageView
                    android:id="@+id/ambulance_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ambulance"/>






            </LinearLayout>

        </androidx.cardview.widget.CardView>








    </LinearLayout>

</ScrollView>